# todo-axum-sqlx

./: Cargo.toml  README.md
.sqlx/: query-2d03c8f2ddab427e22bf6a03cc8eb441b01959baa7f45850139d9ed62521ca4b.json  query-4ac0b6443e80506886d5cff9870a4de6f9a80442ff25a6deed88ce4588eacb27.json  query-5d4250ef5d5740bc6ce26660c2cf851f80fd2490c992e1a7c2981b861f5d90d5.json  query-650c55bf44377ba03cbab8cd25675485cb590fa3d7cf83acf9c86593f9917b03.json  query-6be27b741cf818e5ee84f49de6ff61d8f8e9b08807e234c4737ca1376e406809.json  query-a42919f11d82c33de2046054347784f03bbf2f02538bf4227cdb0d3d0e7c9a66.json  query-b9b9098bf5481310916f00b970bd14adf7b9a6e0c3c85571b81828b030485561.json
config/: base.yaml  dev.yaml
migrations/: 20250206185917_setup.sql  20250206230608_create_task_table.sql  20250214110319_create_user_table.sql  20250303175102_alter_task_table_add_users_foreign_key.sql
scripts/: setup.sh
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  tasks.rs  users.rs  utilities.rs
src/http/: error.rs  mod.rs  utilities.rs
src/http/tasks/: db.rs  mod.rs  router.rs  routes.rs  templates.rs
src/http/users/: db.rs  mod.rs  routes.rs  session.rs  templates.rs
src/tasks/: db.rs  mod.rs  router.rs  routes.rs
src/users/: db.rs  mod.rs  routes.rs  templates.rs
templates/: edit_todo.html  home.html  login.html  new_todo.html  register.html  todos.html
tests/: tasks.rs  users.rs
tests/api/: main.rs  tasks.rs  users.rs
tests/api/helpers/: mod.rs
tests/helpers/: mod.rs
