[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
config = "0.15.7"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
