[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["query", "cookie"] }
config = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "macros", "uuid", "time"] }
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["serde"] }

[dev-dependencies]
axum-test = "17.2.0"
